Implement discovery manager abstract client and remove common gradle project and move rest of the code back to pubber